# api2.kyc.ar

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: IMG_1995_1768077546780.HEIC  IMG_3871_1768077546781.HEIC  IMG_4178_1768077546781.HEIC  IMG_4180_1768077546781.HEIC  IMG_9110_1768077546782.heic  Pasted-Perfecto-Ac-ten-s-EL-PRINT-FINAL-100-operativo-sin-opin_1768073027653.txt  Pasted-Perfecto-Entonces-voy-a-ser-quir-rgico-y-transparente-A_1768075209667.txt  Pasted-Perfecto-Te-dejo-solo-el-1-y-el-2-cerrados-operativos-c_1768075409844.txt  Pasted-Perfecto-Te-doy-las-3-cosas-exactas-operativas-y-sin-re_1768075347440.txt  Pasted-Perfecto-Vamos-con-el-1-qu-tocar-exactamente-en-workers_1768075247662.txt  Pasted-Perfecto-Ya-con-el-ZIP-del-repo-api2-kyc-ar-main-zip-s-_1768072037521.txt  Pasted-Perfecto-Ya-le-el-README-md-completo-Te-doy-una-revisi-_1768070813487.txt  Pasted-Perfecto-ahora-s-qued-clar-simo-lo-que-necesit-s-Quer-s_1768066629526.txt  Pasted-Revis-tu-OpenAPI-JSON-y-en-general-est-muy-bien-estruct_1768070928644.txt  Pasted-S-puedo-leerlo-y-comentar-sobre-tu-OpenAPI-JSON-actuali_1768071285836.txt
docs/: TEMPLATES.md  openapi.yaml
kyc_platform/: README.md  requirements.txt
kyc_platform/api_handler/: __init__.py  main.py  schemas.py
kyc_platform/contracts/: __init__.py  events.py  models.py
kyc_platform/persistence/: __init__.py  base.py  sqlite_repository.py
kyc_platform/queue/: __init__.py  base.py  dlq.py  mock_queue.py  sqs_queue.py
kyc_platform/runner/: __init__.py  (+1 more)
simulacion-de-aws/: README.md  worker_simulator.py
(+47 files in other folders)
