[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "mangum>=0.20.0",
    "opencv-python-headless>=4.12.0.88",
    "pdf417decoder>=1.0.8",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "pyzbar>=0.1.9",
    "uvicorn>=0.40.0",
]
